# fshasher

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: on_push_master_and_pull_request.yml  push_and_pr_master.yml
examples/custom_hasher/: Cargo.toml
examples/custom_hasher/src/: error.rs  hasher.rs  main.rs
examples/custom_reader/: Cargo.toml
examples/custom_reader/src/: error.rs  main.rs  reader.rs
src/: error.rs  lib.rs
src/breaker/: mod.rs
src/collector/: context.rs  error.rs  mod.rs  pool.rs  worker.rs
src/entry/: context.rs  error.rs  filter.rs  mod.rs  pattern.rs
src/hasher/: mod.rs
src/hasher/blake/: error.rs  mod.rs
src/hasher/sha256/: mod.rs
src/hasher/sha512/: error.rs  mod.rs
src/reader/: mod.rs
src/reader/buffering/: error.rs  mod.rs
src/reader/direct/: error.rs  mod.rs
src/reader/mapping/: error.rs  mod.rs
src/reader/md/: error.rs  mod.rs
src/reader/moving/: error.rs  mod.rs
src/test/: mod.rs  usecase.rs  utils.rs
src/test/collector/: filters.rs  mod.rs
src/test/prankster/: mod.rs
src/test/usecase/: extentions.rs  mod.rs
src/test/usecases/: mod.rs  stratagies.rs
src/test/walker/: cancellation.rs  changed_dest.rs  context.rs  mod.rs  progress.rs  stratagies.rs
src/walker/: collector.rs  entry.rs  error.rs  mod.rs  options.rs  pool.rs  progress.rs  tracking.rs  worker.rs
