[package]
name = "fshasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
memmap2 = "0.9.4"
thiserror = "1.0.61"

[dev-dependencies]
indicatif = "0.17.7"

