[package]
name = "fshasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
memmap2 = "0.9.4"
thiserror = "1.0.61"

[dev-dependencies]
indicatif = "0.17.7"
rand = "0.8.5"
ctor = "0.2.8"

[dev-dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

