[package]
name = "fshasher"
version = "0.3.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Scan the destination folder and make a hash of all files to get the current state of the directory"
license = "Apache-2.0"
keywords = ["hash", "hashing", "blake", "md5", "sha"]
categories = ["hash", "fs", "Filesystem", "checksum"]
repository = "https://github.com/icsmw/fshasher.git"
homepage = "https://github.com/icsmw/fshasher"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
memmap2 = "0.9"
thiserror = "1.0"
sha2 = { version = "0.10", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
bstorage = { version = "0.2", optional = true }
dirs = { version = "5.0.1", optional = true }

[features]
use_sha2 = ["sha2"]
tracking = ["bstorage", "serde/derive", "dirs"]

[dev-dependencies]
rand = "0.8"
ctor = "0.2"

[dev-dependencies.uuid]
version = "1.8"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

